--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
         // --- 1. FIREBASE CONFIGURATION ---
         // REPLACE THIS OBJECT WITH YOUR REAL KEYS FROM CONSOLE.FIREBASE.GOOGLE.COM
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT.appspot.com",
-            messagingSenderId: "SENDER_ID",
-            appId: "APP_ID"
+            apiKey: "AIzaSyCMnOugMtES6g1onfMnmuP1AtBN4ukWrbc",
+            authDomain: "jose-simon-menu.firebaseapp.com",
+            projectId: "jose-simon-menu",
+            storageBucket: "jose-simon-menu.firebasestorage.app",
+            messagingSenderId: "1037006282122",
+            appId: "1:1037006282122:web:a74619a5f6e59c010f7c73"
         };
         
         let db, auth;
@@ -387,4 +387,5 @@
         }
     </script>
 </body>
+
 </html>
